--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<div id="outputTextBox">
 			<h1 class="smallertext" id="outputText"></h1>
 		</div>
-		<button class="button" id="copyToClipBoard">copy to clipboard</button>
+		<button class="button" id="copyToClipBoard">copy to clipboard</button> <br>
+		<button class="button" id="diraction button"> dircation : ltr</button>
 
 		<script src="index.js"></script>
 	</body>
