--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<form>
 			<textarea style="text-align: center" id="fInput" rows="1" cols="60" oninput="autoGrow(this)"></textarea>
 			<br />
-			<input type="reset" value="reaset" class="button" />
+			<input type="reset" value="reset" class="button" />
 			<br />
 			<input type="button" value="submit" class="button" id="submit" />
 		</form>
